# mcu-go-open_backend

./: pyproject.toml
gopen_backend/: server.py
gopen_backend/controllers/: course.py
gopen_backend/routers/: auth.py  course.py  tests.py
gopen_backend/utils/: fake_data.py
