[tool.poetry]
name = "mcu-go-open-backend"
version = "0.1.0"
description = "the web backend for mcu go-open"
authors = ["miyago9267 <miyagomizugen@gmail.com>"]
readme = "README.md"
packages = [{include = "mcu_go_open_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
python-dotenv = "^1.0.0"
faker = "^19.6.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
